Fix graphical and performance bugs

--- a/src/app/modules/competitions/general/general.component.html
+++ b/src/app/modules/competitions/general/general.component.html
@@ -5,7 +5,7 @@
       <table>
         <tr>
           <th>Data</th>
-          <td>{{competition.getCompDate()}}</td>
+          <td>{{competition | compDays }}</td>
         </tr>
         <tr>
           <th>Città</th>
