--- a/src/app/modules/faq/faq/faq.component.html
+++ b/src/app/modules/faq/faq/faq.component.html
@@ -1,5 +1,5 @@
 <div fxLayout fxLayoutAlign="center">
-  <div fxFlex.gt-sm="80%" fxFlex.lt-md="90%" fxLayout.lt-md="column" fxLayoutGap="20px">
+  <div fxFlex.gt-sm="80%" fxFlex.lt-md="90%" fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap="20px">
     <div fxFlex.gt-sm="70%">
       <div *ngIf="categories && categories.length > 0">
         <h1>Domande Frequenti</h1>
