--- a/src/app/modules/homepage/competitions/competitions.component.html
+++ b/src/app/modules/homepage/competitions/competitions.component.html
@@ -8,7 +8,7 @@
           <span class="day">{{c.startDate | date:"dd"}}</span>
         </div>
         <div fxLayout="column">
-          <h3> <a href="https://worldcubeassociation.org/competitions/{{c.id}}">{{c.name}}</a></h3>
+          <h3> <a routerLink="/competizioni/{{c.id}}">{{c.name}}</a></h3>
           <p>{{c.city}}</p>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <span class="day">{{c.startDate | date:"dd"}}</span>
         </div>
         <div fxLayout="column">
-          <h3> <a href="https://worldcubeassociation.org/competitions/{{c.id}}">{{c.name}}</a></h3>
+          <h3> <a routerLink="/competizioni/{{c.id}}">{{c.name}}</a></h3>
           <p>{{c.city}}</p>
         </div>
       </div>
