--- a/src/app/modules/contact/contact/contact.component.html
+++ b/src/app/modules/contact/contact/contact.component.html
@@ -1,9 +1,10 @@
 <div fxLayout fxLayoutAlign="center">
-  <div fxFlex.gt-sm="80%" fxFlex.lt-md="90%" fxLayout.lt-md="column" fxLayoutGap="20px">
+  <div fxFlex.gt-sm="80%" fxFlex.lt-md="90%" fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap="20px">
     <div fxFlex.gt-sm="70%">
       <div fxLayout="column" fxLayoutGap="10px">
         <h1>Contattaci</h1>
-        <p>Per contattarci puoi usare il seguente form o inviarci direttamente <a href="mailto:cubingitaly@gmail.com">una
+        <p>Per contattarci puoi usare il seguente form o inviarci direttamente <a
+            href="mailto:cubingitaly@gmail.com">una
             mail</a>.</p>
 
         <mat-form-field>
