--- a/src/app/modules/competition-edit/manage-competition/manage-competition.component.html
+++ b/src/app/modules/competition-edit/manage-competition/manage-competition.component.html
@@ -1,15 +1,17 @@
 <div class="general-container" fxLayout fxLayoutAlign="center">
   <div fxFlex="100%" fxFlex.lt-md="90%" fxLayout="column" fxLayoutGap="20px">
-    <mat-slide-toggle (change)="officialSlider($event)" [formControl]="officialControl">
-      Competizione pubblica</mat-slide-toggle>
-    <span>Una competizione pubblica è visibile da chiunque abbia il link.</span>
-    <span>Per poter ufficializzare una competizione è necessario averla configurata completamente.</span>
-    <mat-slide-toggle (change)="hiddenSlider($event)" [formControl]="hiddenControl">Competizione invisibile
-    </mat-slide-toggle>
-    <span>Una competizione invisibile non sarà pubblicata nell'elenco delle competizioni ufficiali, ma sarà comunque
-      accessibile tramite link da chi ha il permesso di vederla. Una competizione visibile, se pubblica, sarà visibile
-      nell'elenco delle competizioni ufficiali.</span>
-    <div>
+    <ng-container *ifRole="'annComp'">
+      <mat-slide-toggle (change)="officialSlider($event)" [formControl]="officialControl">
+        Competizione pubblica</mat-slide-toggle>
+      <span>Una competizione pubblica è visibile da chiunque abbia il link.</span>
+      <span>Per poter ufficializzare una competizione è necessario averla configurata completamente.</span>
+      <mat-slide-toggle (change)="hiddenSlider($event)" [formControl]="hiddenControl">Competizione invisibile
+      </mat-slide-toggle>
+      <span>Una competizione invisibile non sarà pubblicata nell'elenco delle competizioni ufficiali, ma sarà comunque
+        accessibile tramite link da chi ha il permesso di vederla. Una competizione visibile, se pubblica, sarà visibile
+        nell'elenco delle competizioni ufficiali.</span>
+    </ng-container>
+    <div *ifRole="'aComp'">
       <button mat-raised-button color="warn" (click)="deleteCompetition()">Elimina Competizione</button>
     </div>
     <div>
