--- a/src/app/modules/competition-edit/new/new.component.css
+++ b/src/app/modules/competition-edit/new/new.component.css
@@ -17,3 +17,13 @@
 h3{
     margin-bottom:0px;
 }
+
+h1{
+    margin-bottom:0px;
+    margin-top:7px;
+}
+
+.h1xs{
+    margin-left: 5%;
+    margin-right: 5%;
+}
