--- a/src/app/modules/competitions/official/official.component.html
+++ b/src/app/modules/competitions/official/official.component.html
@@ -18,22 +18,9 @@
       </div>
     </div>
     <div fxFlex.gt-sm="25%" fxLayout="column">
-      <h2>Organizzare</h2>
-      <mat-list>
-        <a href="https://www.cubingitaly.org/tutorial/come-organizzare-una-competizione" mat-list-item>Organizzare una
-          competizione</a>
-        <a routerLink="/competizioni/proposte" mat-list-item>Competizioni proposte</a>
-        <a href="https://www.worldcubeassociation.org/competitions" mat-list-item>Tutte le competizioni</a>
-      </mat-list>
-      <h2>Rimani aggiornato</h2>
-      <mat-list>
-        <a href="https://t.me/cubingitaly" mat-list-item>
-          <fa-icon [icon]="['fab','telegram']"></fa-icon>Telegram
-        </a>
-        <a href="https://www.facebook.com/cubingitaly" mat-list-item>
-          <fa-icon [icon]="['fab','facebook-f']"></fa-icon>Facebook
-        </a>
-      </mat-list>
+      <organize-widget></organize-widget>
+      <keep-up-widget></keep-up-widget>
+      <manage-widget *ifRole="'user'"></manage-widget>
     </div>
   </div>
 </div>
