--- a/src/app/modules/panel/panel/panel.component.html
+++ b/src/app/modules/panel/panel/panel.component.html
@@ -3,6 +3,7 @@
     <h1>Pannello utente</h1>
     <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="2%">
       <article-panel fxFlex="48%" *ifRole="'aArticles'"></article-panel>
+      <comp-panel fxFlex="48%"></comp-panel>
       <faq-panel fxFlex="48%" *ifRole="'eFaq'"></faq-panel>
       <team-panel fxFlex="48%" *ifRole="'mTeams'"></team-panel>
       <tutorial-panel fxFlex="48%" *ifRole="'ePages'"></tutorial-panel>
