Fix bugs with routes

--- a/src/app/modules/competitions/mobile-row-official/mobile-row-official.component.html
+++ b/src/app/modules/competitions/mobile-row-official/mobile-row-official.component.html
@@ -3,6 +3,6 @@
                   src="/assets/images/wca.svg" /></a>
       <div fxLayout="column" fxFlex="grow">
             <div class="date">{{competition | compDays}}</div>
-            <div class="name"><a routerLink="./{{competition.id}}">{{competition.name}}</a></div>
+            <div class="name"><a routerLink="/competizioni/{{competition.id}}">{{competition.name}}</a></div>
       </div>
 </div>
