--- a/src/app/modules/competitions/desktop-official-table/desktop-official-table.component.html
+++ b/src/app/modules/competitions/desktop-official-table/desktop-official-table.component.html
@@ -9,7 +9,7 @@
     <td class="wca"><a href="https://www.worldcubeassociation.org/competitions/{{c.id}}" target="blank"><img
           src="/assets/images/wca.svg" /></a></td>
     <td class="date">{{ c | compDays}}</td>
-    <td class="name"><a routerLink="./{{c.id}}">{{c.name}}</a></td>
+    <td class="name"><a routerLink="/competizioni/{{c.id}}">{{c.name}}</a></td>
     <td fxHide.lt-lg><strong>{{c.city}}</strong>, {{c.country}}<a class="location"
         href="https://maps.google.com/?q={{c.address}}" target="blank">
         <fa-icon icon="external-link-alt"></fa-icon>
