--- a/src/app/modules/competitions/manage-widget/manage-widget.component.html
+++ b/src/app/modules/competitions/manage-widget/manage-widget.component.html
@@ -1,6 +1,6 @@
 <h2>Gestione competizioni</h2>
 <mat-list>
-  <a routerLink="./mie" mat-list-item>
+  <a routerLink="/competizioni/mie" mat-list-item>
     <fa-icon icon="list"></fa-icon>Le mie competizioni
   </a>
   <a routerLink="/competizioni/edit/new" mat-list-item *ifRole="'cComp'">
