--- a/src/app/modules/competitions/my-desktop-table/my-desktop-table.component.html
+++ b/src/app/modules/competitions/my-desktop-table/my-desktop-table.component.html
@@ -9,8 +9,8 @@
     <td class="wca"><a href="https://www.worldcubeassociation.org/competitions/{{c.id}}" target="blank"><img
           src="/assets/images/wca.svg" /></a></td>
     <td class="date">{{c | compDays}}</td>
-    <td class="name"><a routerLink="./{{c.id}}">{{c.name}}</a></td>
-    <td class="options"><a routerLink="../{{c.id}}">
+    <td class="name"><a routerLink="/competizioni/{{c.id}}">{{c.name}}</a></td>
+    <td class="options"><a routerLink="/competizioni/{{c.id}}">
         <fa-icon icon="eye"></fa-icon>
       </a>
       <a routerLink="/competizioni/edit/{{c.id}}">
