--- a/src/app/modules/competitions/competition/competition.component.html
+++ b/src/app/modules/competitions/competition/competition.component.html
@@ -9,7 +9,8 @@
       </mat-tab>
       <mat-tab label="Registrazione">
         <ng-template matTabContent>
-          <registration-info [registration]="registration" [competitionId]="competition.id"></registration-info>
+          <registration-info [registration]="registration" [competitionId]="competition.id"
+            [contactEmail]="competition.contactEmail"></registration-info>
         </ng-template>
       </mat-tab>
       <mat-tab label="Programma" *ngIf="schedule && schedule.length > 0">
