--- a/src/app/modules/competitions/general/general.component.html
+++ b/src/app/modules/competitions/general/general.component.html
@@ -9,26 +9,30 @@
         </tr>
         <tr>
           <th>Città</th>
-          <td>{{competition.city}} <ng-container *ngIf="competition.province">({{competition.province}})</ng-container>
+          <td>{{competition.city}} <ng-container *ngIf="competition.province && !competition.isMultiLocation">
+              ({{competition.province}})</ng-container>
           </td>
         </tr>
         <tr *ngIf="competition.country !== 'Italia'">
           <th>Nazione</th>
           <td>{{competition.country}}</td>
         </tr>
-        <tr>
-          <th>Location</th>
-          <td *ngIf="competition.locationURL"><a href="{{competition.locationURL}}">{{competition.location}}</a></td>
-          <td *ngIf="!competition.locationURL">{{competition.location}}</td>
-        </tr>
-        <tr>
-          <th>Indirizzo</th>
-          <td><a href="https://maps.google.com/?q={{competition.address}}">{{competition.address}}</a></td>
-        </tr>
-        <tr *ngIf="competition.locationDetails">
-          <th>Dettagli</th>
-          <td>{{competition.locationDetails}}</td>
-        </tr>
+
+        <ng-container *ngIf="!competition.isMultiLocation">
+          <tr>
+            <th>Location</th>
+            <td *ngIf="competition.locationURL"><a href="{{competition.locationURL}}">{{competition.location}}</a></td>
+            <td *ngIf="!competition.locationURL">{{competition.location}}</td>
+          </tr>
+          <tr>
+            <th>Indirizzo</th>
+            <td><a href="https://maps.google.com/?q={{competition.address}}">{{competition.address}}</a></td>
+          </tr>
+          <tr *ngIf="competition.locationDetails">
+            <th>Dettagli</th>
+            <td>{{competition.locationDetails}}</td>
+          </tr>
+        </ng-container>
         <tr>
           <th>Contatti</th>
           <td><a href="mailto:{{competition.contactEmail}}">{{competition.contactName}}</a>
@@ -36,7 +40,9 @@
         </tr>
         <tr>
           <th>Limite partecipanti</th>
-          <td>{{registration.competitorsLimit}} concorrenti</td>
+          <td>{{registration.competitorsLimit}} concorrenti <span *ngIf="competition.isMultiLocation">in totale,
+              sommando i limiti per location</span>
+          </td>
         </tr>
         <tr>
           <th>Costo di iscrizione</th>
