improve logos visualization

--- a/src/app/modules/competitions/general/general.component.html
+++ b/src/app/modules/competitions/general/general.component.html
@@ -93,8 +93,8 @@
     </div>
     <div fxFlex.gt-sm="49%">
       <div fxLayout fxLayoutAlign="center center">
-        <img *ngIf="competition.logoURL" style="height: 250px;" src="{{competition.logoURL}}" />
-        <img *ngIf="!competition.logoURL" style="height: 250px;" src="/assets/images/logo_condivisione_quadrato.png" />
+        <img *ngIf="competition.logoURL" src="{{competition.logoURL}}" />
+        <img *ngIf="!competition.logoURL" src="/assets/images/logo_condivisione_quadrato.png" />
       </div>
 
       <div fxLayout="column">
