--- a/src/app/modules/competitions/disclaimer/disclaimer.component.html
+++ b/src/app/modules/competitions/disclaimer/disclaimer.component.html
@@ -14,7 +14,7 @@
       delle competizioni, e non da Cubing Italy.
     </p>
     <p>
-      Le informazioni offerte su questo sito hanno come unico quello scopo quello di fornire i dettagli delle
+      Le informazioni offerte su questo sito hanno come unico scopo quello di fornire i dettagli delle
       competizioni in italiano ma, a differenza di quelle presenti in inglese sul sito della World Cube Association, non
       hanno alcun valore ufficiale. In caso di discrepanze, le informazioni presenti sul sito della World Cube
       Association sono da ritenersi come ufficiali.
