--- a/src/app/modules/homepage/welcome/welcome.component.html
+++ b/src/app/modules/homepage/welcome/welcome.component.html
@@ -1,7 +1,8 @@
 <div class="welcome" fxLayout="column" fxLayoutGap="20px">
   <div fxLayout="column" class="mat-elevation-z1">
     <div class="banner-container">
-      <slideshow *ngIf="banners" [imageUrls]="banners" [backgroundSize]="'cover'" [autoPlay]="true" [height]="'370px'"></slideshow>
+      <slideshow *ngIf="banners" [imageUrls]="banners" [backgroundSize]="'cover'" [autoPlay]="true" [height]="'370px'">
+      </slideshow>
     </div>
     <a routerLink="/chi-siamo" aria-label="Scopri Cubing Italy">
       <div class="quick-links">
@@ -10,19 +11,20 @@
     </a>
   </div>
   <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
-    <a href="https://www.facebook.com/cubingitaly/" target="_blank" class="quick-links fb mat-elevation-z1" fxFlex="33%"
-      fxLayout="column" fxLayoutAlign="center center">
+    <a href="https://www.facebook.com/cubingitaly/" target="_blank" class="quick-links fb mat-elevation-z1"
+      fxFlex.gt-xs="33%" fxLayout="column" fxLayoutAlign="center center">
       <img class="fb-color" src="/assets/images/fb-color.svg">
       <img class="fb-white" src="/assets/images/fb-white.svg">
       <span>Seguici su Facebook</span>
     </a>
-    <a routerLink="/tutorial/imparare-a-risolvere-il-cubo" target="_blank" class="quick-links  mat-elevation-z1" fxFlex="33%"
-      fxLayout="column" fxLayoutAlign="center center">
+    <a routerLink="/tutorial/imparare-a-risolvere-il-cubo" target="_blank" class="quick-links  mat-elevation-z1"
+      fxFlex.gt-xs="33%" fxLayout="column" fxLayoutAlign="center center">
       <img src="/assets/images/mastercubo.png">
       <span>Impara a risolvere</span>
     </a>
     <a href="https://www.worldcubeassociation.org/competitions?utf8=%E2%9C%93&region=Italy&search=&state=present&year=all+years&from_date=&to_date=&delegate=&display=list"
-      target="_blank" class="quick-links  mat-elevation-z1" fxFlex="33%" fxLayout="column" fxLayoutAlign="center center">
+      target="_blank" class="quick-links  mat-elevation-z1" fxFlex.gt-xs="33%" fxLayout="column"
+      fxLayoutAlign="center center">
       <img src="/assets/images/wca.svg">
       <span>Partecipa a una gara</span>
     </a>
